@@ -9,6 +9,7 @@ features
 - suppress excessive printing about numerical troubles in LP on default verblevel (high)
 - updated Mosek interface to compile with Mosek 8.1, too
 - updates GAMS interface to latest version
+- new LP interface to Glop (Google OR tools); CMake only
 
 fixed bugs:
 - fixed bug in shift and propagate--variable information with a negation transformation is correctly reset after backtracking
